--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 HandsOn/Group20/CSV/pollutionDatasets.rar
 HandsOn/Group20/README.md
+HandsOn/Group18/lodrefine/operations-updated.json
+HandsOn/Group18/rdf/Parking_Publicos-updated.ttl
+morph-rdb/
