Added Google API

--- a/HandsOn/Group11/application/source code/.classpath
+++ b/HandsOn/Group11/application/source code/.classpath
@@ -50,5 +50,7 @@
 	<classpathentry kind="lib" path="lib/apache-jena-3.5.0/lib/slf4j-log4j12-1.7.25.jar"/>
 	<classpathentry kind="lib" path="lib/apache-jena-3.5.0/lib/xercesImpl-2.11.0.jar"/>
 	<classpathentry kind="lib" path="lib/apache-jena-3.5.0/lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="lib/virt_jena3.jar"/>
+	<classpathentry kind="lib" path="lib/virtjdbc4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
